# GameAssetBrowser

./: .gitattributes  .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: export-release.ps1
src/: App.tsx  dragOut.ts  main.tsx  platform.ts  styles.css  thumbKey.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/exrthumb/: Cargo.toml
src-tauri/exrthumb/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio_probe.rs  dupes.rs  explorer.rs  index.rs  lib.rs  main.rs  metadata.rs  modeltex.rs  portable.rs  raw.rs  scanner.rs  spectrogram.rs  texmeta.rs  thumbcache.rs  thumbs.rs  tonemap.rs  types.rs  watcher.rs  waveform.rs  winmode.rs  winmode_stub.rs  workflow.rs
src-tauri/src/audio/: commands.rs  engine.rs  mod.rs
src/components/: CollectionPopup.tsx  CollectionsSection.tsx  ContextMenu.tsx  DuplicatesModal.tsx  EmptyState.tsx  ExternalAppsModal.tsx  FileList.tsx  FileRow.tsx  FilterMenu.tsx  FilterPopup.tsx  FolderTree.tsx  FullscreenPreview.tsx  InspectorPanel.tsx  SettingsMenu.tsx  Sidebar.tsx  StatsModal.tsx  StatusBar.tsx  TabBar.tsx  TabPane.tsx  TitleBar.tsx  Toolbar.tsx  fileMenuItems.ts
src/components/audio/: AudioInspector.tsx
src/components/document/: DocViewControls.tsx  DocumentCell.tsx  DocumentInspector.tsx  DocumentPreview.tsx  EbookView.tsx  PdfLayoutControls.tsx  PdfView.tsx  PsdView.tsx  ReadWidthControls.tsx  doc.ts  docThumb.ts
src/components/grid/: AssetCell.tsx  AssetGrid.tsx  AudioCell.tsx  MaterialCell.tsx  ModelCell.tsx  TextureCell.tsx  ThumbGLOverlay.tsx  thumbAtlas.ts  thumbGL.ts
src/components/model/: AtlasPicker.tsx  ModelInspector.tsx  ModelLightControls.tsx  ModelViewport.tsx
src/components/player/: PlayerBar.tsx  SpeedControl.tsx  TimeDisplay.tsx  TransportControls.tsx  VolumeSlider.tsx  WaveformCanvas.tsx
src/components/texture/: PreviewControls.tsx  Sprite2DView.tsx  SpriteArtInspector.tsx  SpriteArtView.tsx  TextureInspector.tsx  TexturePreview.tsx  parallax.ts
src/hooks/: useExternalDrop.ts  useFacetCounts.ts  useKeyboardShortcuts.ts  useMaterialMembership.ts  useModelThumbs.ts  useOverflowCollapse.ts  usePanelWidth.ts  useSidebarWidth.ts  useThumbRequests.ts  useThumbSrc.ts  useVisibleFiles.ts  useWindowFullscreen.ts
src/ipc/: commands.ts  events.ts
src/material/: classify.test.ts  classify.ts  table.ts
src/model/: dispose.ts  gradientBg.ts  loadModel.ts  modelThumbWorker.ts  rescueTextures.test.ts  rescueTextures.ts  thumbQueue.ts
src/stores/: atlasStore.ts  docView.ts  ebookBookmarks.ts  envPrefs.ts  externalApps.ts  favoritesStore.ts  libraryStore.ts  panelPrefs.ts  pdfBookmarks.ts  playerStore.ts  renderPrefs.ts  revealFolder.ts  settings.ts  shuffle.ts  tabs.ts  theme.ts  thumbProgress.ts  tonemapPrefs.ts
