[package]
name = "asset-previewer"
version = "0.1.0"
description = "Sleek dark-mode game asset previewer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asset_previewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# symphonia-all forces ALL rodio decoding through symphonia => uniform try_seek
# support. Rodio's default decoders (hound/claxon/lewton) do NOT implement seek.
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
# Direct symphonia dep (same 0.5.x as rodio's) for the header-only duration
# probe and the waveform decode. Cargo feature unification also switches these
# extra codecs on inside rodio's decoder. mp3/aac/isomp4/alac/aiff are NOT in
# symphonia's defaults — they must be listed explicitly.
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "vorbis",
    "ogg",
    "pcm",
    "wav",
    "aiff",
    "alac",
] }
walkdir = "2.5"
crossbeam-channel = "0.5"
rayon = "1.10"
lru = "0.12"
parking_lot = "0.12"
# Texture decoding. default-features off because image's defaults pull in its
# own rayon thread pool, which would fight the thumbnail pool for cores; we
# schedule parallelism ourselves. Only the formats in TEXTURE_EXTENSIONS.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "tga",
    "dds",
    "tiff",
    "hdr",
    "exr",
] }
