[package]
name = "game-file-browser"
version = "0.1.0"
description = "Sleek dark-mode game file browser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "game_file_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Optimize the DECODE crates even in dev. Our own crate stays at opt-level 0,
# so incremental builds stay fast.
#
# Measured on the real texture set: at opt-level 0 the mean decode is 964 ms
# per file — 27.9x slower than release (34.6 ms). That turned a 42-cell
# screenful into ~9.8 s instead of ~0.36 s, and the full 303-file set into
# 58.6 s instead of 2.9 s. It was, by an order of magnitude, the entire reason
# thumbnails felt slow; no amount of queue tuning touches it.
#
# Listed per-crate rather than as `package."*"` on purpose: the glob also
# rebuilds every dependency's BUILD SCRIPT, and Windows Smart App Control
# blocks the freshly-produced unsigned binaries outright ("An Application
# Control policy has blocked this file", os error 4551). Naming the leaf
# codecs leaves tauri's build scripts untouched.
#
# miniz_oxide matters as much as image itself — it is the zlib backend PNG
# decoding actually spends its time in.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.zune-inflate]
opt-level = 3
[profile.dev.package.exr]
opt-level = 3
[profile.dev.package.tiff]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
# Audio decode and waveform peaks are the same shape of work.
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# symphonia-all forces ALL rodio decoding through symphonia => uniform try_seek
# support. Rodio's default decoders (hound/claxon/lewton) do NOT implement seek.
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
# Direct symphonia dep (same 0.5.x as rodio's) for the header-only duration
# probe and the waveform decode. Cargo feature unification also switches these
# extra codecs on inside rodio's decoder. mp3/aac/isomp4/alac/aiff are NOT in
# symphonia's defaults — they must be listed explicitly.
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "vorbis",
    "ogg",
    "pcm",
    "wav",
    "aiff",
    "alac",
] }
walkdir = "2.5"
# Filesystem watcher (watcher.rs) driving the auto-rescan. Debounce is a small
# manual thread on our own crossbeam channel — no debouncer crate needed.
notify = "8"
crossbeam-channel = "0.5"
rayon = "1.10"
lru = "0.12"
parking_lot = "0.12"
# Texture decoding. default-features off because image's defaults pull in its
# own rayon thread pool, which would fight the thumbnail pool for cores; we
# schedule parallelism ourselves. Only the formats in TEXTURE_EXTENSIONS.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "tga",
    "dds",
    "tiff",
    "hdr",
    "exr",
    "gif",
    "webp",
] }
# libwebp fallback: the pure-Rust `image` WebP decoder rejects some extended /
# animated WebP (launcher assets, etc.); libwebp reads them.
webp = "0.3"
# Duplicate finder (dupes.rs): xxh3 for the two-stage content hash — not
# cryptographic on purpose, it only needs to be fast and collision-checked by
# the full-file confirm pass.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Direct Win32 for the maximize<->fullscreen placement dance (winmode.rs).
# Same 0.61 tauri/tao already use, so no new crate in the tree.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
